--- a/case-studies/florida-mayhem.html
+++ b/case-studies/florida-mayhem.html
@@ -46,27 +46,27 @@
             <div class="overlaying-navigation__nav-item u-margin-bottom-mid">
                 <ul class="footer__list footer__list--standalone">
                     <li class="footer__list-item">
-                        <a href="#" class="footer__link">
+                        <a href="https://www.instagram.com/fwrd_co/" class="footer__link">
                             <img src="../img/svg/Shared/instagram.svg" alt="" class="footer__social-media">
                         </a>
                     </li>
                     <li class="footer__list-item">
-                        <a href="#" class="footer__link">
+                        <a href="https://www.behance.net/FWRD" class="footer__link">
                             <img src="../img/svg/Shared/behance.svg" alt="" class="footer__social-media">
                         </a>
                     </li>
                     <li class="footer__list-item">
-                        <a href="#" class="footer__link">
+                        <a href="https://dribbble.com/FWRD/about" class="footer__link">
                             <img src="../img/svg/Shared/dribble.svg" alt="" class="footer__social-media">
                         </a>
                     </li>
                     <li class="footer__list-item">
-                        <a href="#" class="footer__link">
+                        <a href="https://www.linkedin.com/company/fwrd-digital-product" class="footer__link">
                             <img src="../img/svg/Shared/linkedin.svg" alt="" class="footer__social-media">
                         </a>
                     </li>
                     <li class="footer__list-item">
-                        <a href="#" class="footer__link">
+                        <a href="https://www.facebook.com/FWRDdigitalproduct" class="footer__link">
                             <img src="../img/svg/Shared/facebook.svg" alt="" class="footer__social-media">
                         </a>
                     </li>
@@ -77,7 +77,9 @@
     <header class="header">
         <div class="menu"> 
             <div class="menu__logo">
-                <img src="../img/icons/fwrd-logo.png" alt="Logo image" class="menu__logo-img">
+                <a class="menu__logo-link" href="../index.html">
+                    <img src="../img/icons/fwrd-logo.png" alt="Logo image" class="menu__logo-img">
+                </a>
             </div>
             <nav class="navigation">
                 <ul class="navigation__list">
@@ -102,9 +104,9 @@
                 <img src="../img/svg/case-study__triangle.svg" class="case-study__triangle-image">
             </div>
             <div class="case-study__description">
-                <h1 class="case-study__study-heading">Case study: Website design pixel playground</h1>
+                <h1 class="case-study__study-heading">CASE STUDY: FLORIDA MAYHEM</h1>
                 <p class="case-study__study-description">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo commodi repellendus deleniti, consectetur est iure ipsa nam fugiat voluptatum amet porro accusantium, aspernatur exercitationem laboriosam incidunt distinctio officiis sit expedita?
+                    Florida Mayhem is a franchisee of the Overwatch League and daughter company of Misfits Gaming Group, an organisation with prevalent roots in the esports industry and video games entertainment sphere.
                 </p>
             </div>
         </div>
@@ -327,7 +329,7 @@
                                 </a>
                             </li>
                             <li class="footer__list-item">
-                                <a href="#" class="footer__link">
+                                <a href="https://dribbble.com/FWRD/about" class="footer__link">
                                     <img src="../img/svg/Shared/dribble.svg" alt="" class="footer__social-media">
                                 </a>
                             </li>
