--- a/case-studies/name-your-price.html
+++ b/case-studies/name-your-price.html
@@ -45,27 +45,27 @@
             <div class="overlaying-navigation__nav-item u-margin-bottom-mid">
                 <ul class="footer__list footer__list--standalone">
                     <li class="footer__list-item">
-                        <a href="#" class="footer__link">
+                        <a href="https://www.instagram.com/fwrd_co/" class="footer__link">
                             <img src="../img/svg/Shared/instagram.svg" alt="" class="footer__social-media">
                         </a>
                     </li>
                     <li class="footer__list-item">
-                        <a href="#" class="footer__link">
+                        <a href="https://www.behance.net/FWRD" class="footer__link">
                             <img src="../img/svg/Shared/behance.svg" alt="" class="footer__social-media">
                         </a>
                     </li>
                     <li class="footer__list-item">
-                        <a href="#" class="footer__link">
+                        <a href="https://dribbble.com/FWRD/about" class="footer__link">
                             <img src="../img/svg/Shared/dribble.svg" alt="" class="footer__social-media">
                         </a>
                     </li>
                     <li class="footer__list-item">
-                        <a href="#" class="footer__link">
+                        <a href="https://www.linkedin.com/company/fwrd-digital-product" class="footer__link">
                             <img src="../img/svg/Shared/linkedin.svg" alt="" class="footer__social-media">
                         </a>
                     </li>
                     <li class="footer__list-item">
-                        <a href="#" class="footer__link">
+                        <a href="https://www.facebook.com/FWRDdigitalproduct" class="footer__link">
                             <img src="../img/svg/Shared/facebook.svg" alt="" class="footer__social-media">
                         </a>
                     </li>
@@ -101,9 +101,9 @@
                 <img src="../img/svg/case-study__triangle.svg" class="case-study__triangle-image">
             </div>
             <div class="case-study__description">
-                <h1 class="case-study__study-heading">Case study: Website design pixel playground</h1>
+                <h1 class="case-study__study-heading">CASE STUDY: NAME YOUR PRICE WEBSITE DESIGN</h1>
                 <p class="case-study__study-description">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo commodi repellendus deleniti, consectetur est iure ipsa nam fugiat voluptatum amet porro accusantium, aspernatur exercitationem laboriosam incidunt distinctio officiis sit expedita?
+                    Name Your Price is the brainchild of Twitch streamer, YouTube content creator and television personality, AustinShow, originally broadcast in 2022 on US network G4.
                 </p>
             </div>
         </div>
@@ -291,7 +291,9 @@
         </div>
         <div class="footer-content">
             <div class="footer__logo-box">
-                <img src="../img/icons/fwrd-logo-white.png" alt="" class="footer__logo">
+                <a class="menu__logo-link" href="../index.html">
+                    <img src="../img/icons/fwrd-logo.png" alt="Logo image" class="menu__logo-img">
+                </a>
             </div>
             <ul class="footer__list">
                 <div class="footer__list-section">
@@ -316,7 +318,7 @@
                                 </a>
                             </li>
                             <li class="footer__list-item">
-                                <a href="#" class="footer__link">
+                                <a href="https://dribbble.com/FWRD/about" class="footer__link">
                                     <img src="../img/svg/Shared/dribble.svg" alt="" class="footer__social-media">
                                 </a>
                             </li>
