--- a/links/portfolio.html
+++ b/links/portfolio.html
@@ -57,7 +57,7 @@
                         </a>
                     </li>
                     <li class="footer__list-item">
-                        <a href="#" class="footer__link">
+                        <a href="https://dribbble.com/FWRD/about" class="footer__link">
                             <img src="../img/svg/Shared/dribble.svg" alt="" class="footer__social-media">
                         </a>
                     </li>
@@ -78,7 +78,9 @@
     <header class="header">
         <div class="menu">
             <div class="menu__logo">
-                <img src="../img/icons/fwrd-logo.png" alt="Logo image" class="menu__logo-img">
+                <a class="menu__logo-link" href="../index.html">
+                    <img src="../img/icons/fwrd-logo.png" alt="Logo image" class="menu__logo-img">
+                </a>
             </div>
             <nav class="navigation">
                 <ul class="navigation__list">
@@ -182,13 +184,13 @@
             </div>
 
         </div>
-        <div class="u-center-text u-padding-top-btm-lg">
+        <!-- <div class="u-center-text u-padding-top-btm-lg">
             <button class="button button--green section-portfolios__button">
                 <span class="button__text">
                     View more projects
                 </span>
             </button>
-        </div>
+        </div> -->
     </section>
     <section class="section-clients">
         <div class="notch-title notch-title--green notch-title--top-left">
@@ -286,7 +288,7 @@
                         </a>
                     </li>
                     <li class="footer__list-item">
-                        <a href="#" class="footer__link">
+                        <a href="https://dribbble.com/FWRD/about" class="footer__link">
                             <img src="../img/svg/Shared/dribble.svg" alt="" class="footer__social-media">
                         </a>
                     </li>
