--- a/links/services.html
+++ b/links/services.html
@@ -7,12 +7,12 @@
     <meta name="keywords" content="Creative agencies, Internet Marketing, Graphic Design, Merchandising Companies, Web Developer">
     <meta name="description" content="FWRD provides expert services in creative design, web development, and merchandising to elevate your projects and enable your ideas to take flight">
     
-    <meta property="og:title" content="FWRD" />
+    <meta property="og:title" content="FWRD - Services" />
     <meta property="og:type" content="website" />
     <meta property="og:description" content="FWRD: A product-first creative house, empowering businesses with customised branding, marketing, and merchandising solutions." />
     <meta property="og:url" content="https://petarpaskas.github.io/DefinitelyNotImportant/index.html" />
     <meta property="og:image" content="https://petarpaskas.github.io/DefinitelyNotImportant/img/icons/fwrd-logo.png" />
-    
+
     <link rel="apple-touch-icon" sizes="180x180" href="../img/ico/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="48x48" href="../img/ico/favicon.ico">
     <link rel="icon" type="image/png" sizes="32x32" href="../img/ico/favicon-32x32.png">
@@ -56,7 +56,7 @@
                         </a>
                     </li>
                     <li class="footer__list-item">
-                        <a href="#" class="footer__link">
+                        <a href="https://dribbble.com/FWRD/about" class="footer__link">
                             <img src="../img/svg/Shared/dribble.svg" alt="" class="footer__social-media">
                         </a>
                     </li>
@@ -78,7 +78,9 @@
         <img src="../img/svg/Services/services-header.svg" alt="" class="services__header-wave">
         <div class="menu">
             <div class="menu__logo">
-                <img src="../img/icons/fwrd-logo-white.png" alt="Logo image" class="menu__logo-img">
+                <a class="menu__logo-link" href="../index.html">
+                    <img src="../img/icons/fwrd-logo.png" alt="Logo image" class="menu__logo-img">
+                </a>
             </div>
             <nav class="navigation">
                 <ul class="navigation__list">
@@ -296,9 +298,6 @@
                         <div class="quote__row">
                             <span class="quote__quotee">Siebert Lanhove, Founder, Re:Activ</span>
                         </div>
-                        <div class="quote__row">
-                            <span class="quote__text quote__text--start">services provided • services provided • services provided</span>
-                        </div>
                         <div class="quote__open-quote"></div>
                         <div class="quote__close-quote"></div>
                     </div>
@@ -312,9 +311,6 @@
                         </div>
                         <div class="quote__row">
                             <span class="quote__quotee">Ian Bick, Host of Locked In with Ian Bick/Founder at Creative Evolution Studios</span>
-                        </div>
-                        <div class="quote__row">
-                            <span class="quote__text quote__text--start">services provided • services provided • services provided</span>
                         </div>
                         <div class="quote__open-quote"></div>
                         <div class="quote__close-quote"></div>
@@ -330,9 +326,6 @@
                         <div class="quote__row">
                             <span class="quote__quotee">Polly Emery, Director Of Marketing, Misfits Gaming Group</span>
                         </div>
-                        <div class="quote__row">
-                            <span class="quote__text quote__text--start">services provided • services provided • services provided</span>
-                        </div>
                         <div class="quote__open-quote"></div>
                         <div class="quote__close-quote"></div>
                     </div>
@@ -346,9 +339,6 @@
                         </div>
                         <div class="quote__row">
                             <span class="quote__quotee">Darroll Jenkins, SVP Merchandise & Consumer Products, Misfits Gaming Group</span>
-                        </div>
-                        <div class="quote__row">
-                            <span class="quote__text quote__text--start">services provided • services provided • services provided</span>
                         </div>
                         <div class="quote__open-quote"></div>
                         <div class="quote__close-quote"></div>
@@ -398,7 +388,7 @@
                                 </a>
                             </li>
                             <li class="footer__list-item">
-                                <a href="#" class="footer__link">
+                                <a href="https://dribbble.com/FWRD/about" class="footer__link">
                                     <img src="../img/svg/Shared/dribble.svg" alt="" class="footer__social-media">
                                 </a>
                             </li>
