--- a/blogs/transparency.html
+++ b/blogs/transparency.html
@@ -56,7 +56,7 @@
                         </a>
                     </li>
                     <li class="footer__list-item">
-                        <a href="#" class="footer__link">
+                        <a href="https://dribbble.com/FWRD/about" class="footer__link">
                             <img src="../img/svg/Shared/dribble.svg" alt="" class="footer__social-media">
                         </a>
                     </li>
@@ -77,7 +77,9 @@
     <header class="header">
         <div class="menu">
             <div class="menu__logo">
-                <img src="../img/icons/fwrd-logo.png" alt="Logo image" class="menu__logo-img">
+                <a class="menu__logo-link" href="../index.html">
+                    <img src="../img/icons/fwrd-logo.png" alt="Logo image" class="menu__logo-img">
+                </a>
             </div>
             <nav class="navigation">
                 <ul class="navigation__list">
@@ -229,7 +231,7 @@
                             </a>
                         </li>
                         <li class="footer__list-item">
-                            <a href="#" class="footer__link">
+                            <a href="https://dribbble.com/FWRD/about" class="footer__link">
                                 <img src="../img/svg/Shared/dribble.svg" alt="" class="footer__social-media">
                             </a>
                         </li>
