--- a/case-studies/ian-bick.html
+++ b/case-studies/ian-bick.html
@@ -45,27 +45,27 @@
             <div class="overlaying-navigation__nav-item u-margin-bottom-mid">
                 <ul class="footer__list footer__list--standalone">
                     <li class="footer__list-item">
-                        <a href="#" class="footer__link">
+                        <a href="https://www.instagram.com/fwrd_co/" class="footer__link">
                             <img src="../img/svg/Shared/instagram.svg" alt="" class="footer__social-media">
                         </a>
                     </li>
                     <li class="footer__list-item">
-                        <a href="#" class="footer__link">
+                        <a href="https://www.behance.net/FWRD" class="footer__link">
                             <img src="../img/svg/Shared/behance.svg" alt="" class="footer__social-media">
                         </a>
                     </li>
                     <li class="footer__list-item">
-                        <a href="#" class="footer__link">
+                        <a href="https://dribbble.com/FWRD/about" class="footer__link">
                             <img src="../img/svg/Shared/dribble.svg" alt="" class="footer__social-media">
                         </a>
                     </li>
                     <li class="footer__list-item">
-                        <a href="#" class="footer__link">
+                        <a href="https://www.linkedin.com/company/fwrd-digital-product" class="footer__link">
                             <img src="../img/svg/Shared/linkedin.svg" alt="" class="footer__social-media">
                         </a>
                     </li>
                     <li class="footer__list-item">
-                        <a href="#" class="footer__link">
+                        <a href="https://www.facebook.com/FWRDdigitalproduct" class="footer__link">
                             <img src="../img/svg/Shared/facebook.svg" alt="" class="footer__social-media">
                         </a>
                     </li>
@@ -76,7 +76,9 @@
     <header class="header">
         <div class="menu"> 
             <div class="menu__logo">
-                <img src="../img/icons/fwrd-logo.png" alt="Logo image" class="menu__logo-img">
+                <a class="menu__logo-link" href="../index.html">
+                    <img src="../img/icons/fwrd-logo.png" alt="Logo image" class="menu__logo-img">
+                </a>
             </div>
             <nav class="navigation">
                 <ul class="navigation__list">
@@ -101,9 +103,9 @@
                 <img src="../img/svg/case-study__triangle.svg" class="case-study__triangle-image">
             </div>
             <div class="case-study__description">
-                <h1 class="case-study__study-heading">Case study: Website design pixel playground</h1>
+                <h1 class="case-study__study-heading">CASE STUDY: WEBSITE DESIGN LOCKED IN WITH IAN BICK</h1>
                 <p class="case-study__study-description">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo commodi repellendus deleniti, consectetur est iure ipsa nam fugiat voluptatum amet porro accusantium, aspernatur exercitationem laboriosam incidunt distinctio officiis sit expedita?
+                    Locked In is a podcast delivered by host Ian Bick in which former convicts, addicts, law enforcement, lawyers, and people from all walks of life discuss trauma and overcoming immense struggle. The podcaster has amassed an enormous listener base who tune in twice a week to hear guests’ stories.
                 </p>
             </div>
         </div>
@@ -296,7 +298,7 @@
                                 </a>
                             </li>
                             <li class="footer__list-item">
-                                <a href="#" class="footer__link">
+                                <a href="https://dribbble.com/FWRD/about" class="footer__link">
                                     <img src="../img/svg/Shared/dribble.svg" alt="" class="footer__social-media">
                                 </a>
                             </li>
