--- a/case-studies/pixel-old.html
+++ b/case-studies/pixel-old.html
@@ -45,28 +45,28 @@
             <div class="overlaying-navigation__nav-item u-margin-bottom-mid">
                 <ul class="footer__list footer__list--standalone">
                     <li class="footer__list-item">
-                        <a href="#" class="footer__link">
-                            <img src="../img/svg/instagram.svg" alt="" class="footer__social-media">
+                        <a href="https://www.instagram.com/fwrd_co/" class="footer__link">
+                            <img src="../img/svg/Shared/instagram.svg" alt="" class="footer__social-media">
                         </a>
                     </li>
                     <li class="footer__list-item">
-                        <a href="#" class="footer__link">
-                            <img src="../img/svg/behance.svg" alt="" class="footer__social-media">
+                        <a href="https://www.behance.net/FWRD" class="footer__link">
+                            <img src="../img/svg/Shared/behance.svg" alt="" class="footer__social-media">
                         </a>
                     </li>
                     <li class="footer__list-item">
-                        <a href="#" class="footer__link">
-                            <img src="../img/svg/dribble.svg" alt="" class="footer__social-media">
+                        <a href="https://dribbble.com/FWRD/about" class="footer__link">
+                            <img src="../img/svg/Shared/dribble.svg" alt="" class="footer__social-media">
                         </a>
                     </li>
                     <li class="footer__list-item">
-                        <a href="#" class="footer__link">
-                            <img src="../img/svg/linkedin.svg" alt="" class="footer__social-media">
+                        <a href="https://www.linkedin.com/company/fwrd-digital-product" class="footer__link">
+                            <img src="../img/svg/Shared/linkedin.svg" alt="" class="footer__social-media">
                         </a>
                     </li>
                     <li class="footer__list-item">
-                        <a href="#" class="footer__link">
-                            <img src="../img/svg/facebook.svg" alt="" class="footer__social-media">
+                        <a href="https://www.facebook.com/FWRDdigitalproduct" class="footer__link">
+                            <img src="../img/svg/Shared/facebook.svg" alt="" class="footer__social-media">
                         </a>
                     </li>
                 </ul>
@@ -76,7 +76,9 @@
     <header class="header">
         <div class="menu"> 
             <div class="menu__logo">
-                <img src="../img/icons/fwrd-logo.png" alt="Logo image" class="menu__logo-img">
+                <a class="menu__logo-link" href="../index.html">
+                    <img src="../img/icons/fwrd-logo.png" alt="Logo image" class="menu__logo-img">
+                </a>
             </div>
             <nav class="navigation">
                 <ul class="navigation__list">
@@ -272,7 +274,7 @@
                                 </a>
                             </li>
                             <li class="footer__list-item">
-                                <a href="#" class="footer__link">
+                                <a href="https://dribbble.com/FWRD/about" class="footer__link">
                                     <img src="../img/svg/Shared/dribble.svg" alt="" class="footer__social-media">
                                 </a>
                             </li>
