--- a/case-studies/pixel.html
+++ b/case-studies/pixel.html
@@ -45,27 +45,27 @@
             <div class="overlaying-navigation__nav-item u-margin-bottom-mid">
                 <ul class="footer__list footer__list--standalone">
                     <li class="footer__list-item">
-                        <a href="#" class="footer__link">
+                        <a href="https://www.instagram.com/fwrd_co/" class="footer__link">
                             <img src="../img/svg/Shared/instagram.svg" alt="" class="footer__social-media">
                         </a>
                     </li>
                     <li class="footer__list-item">
-                        <a href="#" class="footer__link">
+                        <a href="https://www.behance.net/FWRD" class="footer__link">
                             <img src="../img/svg/Shared/behance.svg" alt="" class="footer__social-media">
                         </a>
                     </li>
                     <li class="footer__list-item">
-                        <a href="#" class="footer__link">
+                        <a href="https://dribbble.com/FWRD/about" class="footer__link">
                             <img src="../img/svg/Shared/dribble.svg" alt="" class="footer__social-media">
                         </a>
                     </li>
                     <li class="footer__list-item">
-                        <a href="#" class="footer__link">
+                        <a href="https://www.linkedin.com/company/fwrd-digital-product" class="footer__link">
                             <img src="../img/svg/Shared/linkedin.svg" alt="" class="footer__social-media">
                         </a>
                     </li>
                     <li class="footer__list-item">
-                        <a href="#" class="footer__link">
+                        <a href="https://www.facebook.com/FWRDdigitalproduct" class="footer__link">
                             <img src="../img/svg/Shared/facebook.svg" alt="" class="footer__social-media">
                         </a>
                     </li>
@@ -101,9 +101,9 @@
                     <img src="../img/svg/case-study__triangle.svg" class="case-study__triangle-image">
                 </div>
                 <div class="case-study__description">
-                    <h1 class="case-study__study-heading">Case study: Website design pixel playground</h1>
+                    <h1 class="case-study__study-heading">CASE STUDY: WEBSITE DESIGN PIXEL PLAYGROUND</h1>
                     <p class="case-study__study-description">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo commodi repellendus deleniti, consectetur est iure ipsa nam fugiat voluptatum amet porro accusantium, aspernatur exercitationem laboriosam incidunt distinctio officiis sit expedita?
+                        Pixel Playground is the brainchild of YouTube content creators Karl Jacobs and KreekCraft, together with Misfits Gaming Group. Primarily a games studio with a focus on Roblox, the brand is also a vehicle for content, live events, and merchandise.
                     </p>
                 </div>
             </div>
@@ -279,7 +279,9 @@
         </div>
         <div class="footer-content">
             <div class="footer__logo-box">
-                <img src="../img/icons/fwrd-logo-white.png" alt="" class="footer__logo">
+                <a class="menu__logo-link" href="../index.html">
+                    <img src="../img/icons/fwrd-logo.png" alt="Logo image" class="menu__logo-img">
+                </a>
             </div>
             <ul class="footer__list">
                 <div class="footer__list-section">
@@ -291,7 +293,7 @@
                 </div>
                 <div class="footer__list-section">
                     <li class="footer__list-item">
-                        <span href="" class="footer__text">Follow us</span>
+                        <span  class="footer__text">Follow us</span>
                         <ul class="footer__list footer__list--standalone">
                             <li class="footer__list-item">
                                 <a href="https://www.instagram.com/fwrd_co/" class="footer__link">
@@ -304,7 +306,7 @@
                                 </a>
                             </li>
                             <li class="footer__list-item">
-                                <a href="#" class="footer__link">
+                                <a href="https://dribbble.com/FWRD/about" class="footer__link">
                                     <img src="../img/svg/Shared/dribble.svg" alt="" class="footer__social-media">
                                 </a>
                             </li>
