--- a/case-studies/pixel.html
+++ b/case-studies/pixel.html
@@ -76,7 +76,9 @@
     <header class="header">
         <div class="menu"> 
             <div class="menu__logo">
-                <img src="../img/icons/fwrd-logo.png" alt="Logo image" class="menu__logo-img">
+                <a class="menu__logo-link" href="../index.html">
+                    <img src="../img/icons/fwrd-logo.png" alt="Logo image" class="menu__logo-img">
+                </a>
             </div>
             <nav class="navigation">
                 <ul class="navigation__list">
