--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                 </div>
                 <div class="header__main">
                     <div class="header__text-box">
-                        <h1 class="heading-primary">Bringing <br class="u-text-break"> <span class="u-text-fading" id="middleline">products</span> to life</h1>
+                        <h1 class="heading-primary">Bringing <br class="u-text-break"> <span class="heading-primary__line u-text-fading" id="middleline">products</span> to life</h1>
                     </div>
                     <div class="header__content-box">
                         <div class="composition">
