--- a/case-studies/florida-mayhem.html
+++ b/case-studies/florida-mayhem.html
@@ -195,7 +195,7 @@
                 </div>
                 
                 <div class="gallery-case__full">
-                    <div class="gallery-case__flex-3-items">
+                    <div id="controlled-gallery-row" class="gallery-case__flex-3-items">
                         <div class="gallery-case__item gallery-case__item--2">
                             <img src="../img/case-studies/florida-mayhem/mayhem 1.png" alt="" class="gallery-case__image">
                         </div>
