--- a/case-studies/reactiv.html
+++ b/case-studies/reactiv.html
@@ -274,7 +274,7 @@
                 </div>
 
 
-                <div class="gallery-case__row gallery-case__flex-3-items">
+                <div id="controlled-gallery-row" class="gallery-case__row gallery-case__flex-3-items">
                         <div class="gallery-case__item gallery-case__item--1">
                             <img src="../img/case-studies/reactiv/reactiv pic 1.png" alt="" class="gallery-case__image">
                         </div>
