--- a/links/services.html
+++ b/links/services.html
@@ -281,6 +281,7 @@
                     <img class="logos__image" src="../img/icons/Clients/wonitrol.png">
                     <img class="logos__image" src="../img/icons/Clients/kreek.png">
                     <img class="logos__image" src="../img/icons/Clients/pxl.png">
+                    <img class="logos__image" src="../img/icons/Clients/ian.png">
                 </div>
             </div>
         </section>
