--- a/case-studies/kreekcraft.html
+++ b/case-studies/kreekcraft.html
@@ -164,6 +164,11 @@
                 </div>
             </div>
         </section>
+        <section class="section-pregallery section-gallery">
+            <div class="section-gallery--banner">
+                <img class="section-gallery--banner-image" src="../img/case-studies/kreekcraft/kreekcraft banner 1.png">
+            </div>
+        </section>
         <section class="section-testimonial">
             <div class="quote">
                 <div class="quote__row">
@@ -179,17 +184,8 @@
                 <div class="quote__close-quote"></div>
             </div>
         </section>
-        <!-- <section class="section-separator">
-            <h4 class="next-section-description h-4">
-                Desktop website design
-            </h4>
-        </section> -->
-        <div class="section-gallery">
 
-            <div class="section-gallery--banner">
-                <img class="section-gallery--banner-image" src="../img/case-studies/kreekcraft/kreekcraft banner 1.png">
-            </div>
-
+        <section class="section-gallery">
             <div class="gallery-case">
                 <div class="gallery-case__row gallery-case__row--3-items">
                     <div class="gallery-case__item">
@@ -226,7 +222,7 @@
                 </div>
             </div>
             <div class="u-clearfix"></div>
-        </div>
+        </section>
 
 
 
