--- a/case-studies/reactiv.html
+++ b/case-studies/reactiv.html
@@ -161,30 +161,8 @@
                 </div>
             </div>
         </section>
-        <section class="section-testimonial">
-            <div class="quote">
-                <div class="quote__row">
-                    <span class="quote__title">Testimonial</span>
-                </div>
-                <div class="quote__row">
-                    <span class="quote__text quote__text--center">&lsquo;FWRD is a team run by veterans in the space and their work reflects that! Their communication was top tier and they went the extra mile on the branding for my company.</span>
-                </div>
-                <div class="quote__row">
-                    <span class="quote__text quote__text--center">I am looking forward to working on more projects with them in the future!&rsquo;</span>
-                </div>
-                <div class="quote__row">
-                    <span class="quote__quotee">Siebert Lanhove, Founder, Re:Activ</span>
-                </div>
-                <div class="quote__open-quote"></div>
-                <div class="quote__close-quote"></div>
-            </div>
-        </section>
-        <section class="section-separator">
-            <h4 class="next-section-description h-4">
-                Logo
-            </h4>
-        </section>
-        <section class="section-gallery">
+
+        <section class="section-pregallery section-gallery">
             <div class="gallery-case">
                 <div class="gallery-case__row gallery-case__row--flex">
                     <div class="col-1-of-2">
@@ -272,7 +250,34 @@
                         </div>
                     </div>
                 </div>
-
+            </div>
+        </section>
+        
+        <section class="section-testimonial">
+            <div class="quote">
+                <div class="quote__row">
+                    <span class="quote__title">Testimonial</span>
+                </div>
+                <div class="quote__row">
+                    <span class="quote__text quote__text--center">&lsquo;FWRD is a team run by veterans in the space and their work reflects that! Their communication was top tier and they went the extra mile on the branding for my company.</span>
+                </div>
+                <div class="quote__row">
+                    <span class="quote__text quote__text--center">I am looking forward to working on more projects with them in the future!&rsquo;</span>
+                </div>
+                <div class="quote__row">
+                    <span class="quote__quotee">Siebert Lanhove, Founder, Re:Activ</span>
+                </div>
+                <div class="quote__open-quote"></div>
+                <div class="quote__close-quote"></div>
+            </div>
+        </section>
+        <section class="section-separator">
+            <h4 class="next-section-description h-4">
+                Logo
+            </h4>
+        </section>
+        <section class="section-gallery">
+            <div class="gallery-case">
 
                 <div id="controlled-gallery-row" class="gallery-case__row gallery-case__flex-3-items">
                         <div class="gallery-case__item gallery-case__item--1">
