--- a/links/portfolio.html
+++ b/links/portfolio.html
@@ -104,7 +104,7 @@
         <img src="../img/svg/Portfolio/portfolio-bg-right-wave.svg" class="section-portfolios__wave section-portfolios__wave--right section-portfolios__wave--upper">
         <img src="../img/svg/Portfolio/portfolio-bg-right-wave.svg" class="section-portfolios__wave section-portfolios__wave--right section-portfolios__wave--lower">
         <img src="../img/svg/Portfolio/portfolio-bg-left-wave.svg" class="section-portfolios__wave section-portfolios__wave--left">
-        <div class="zigzag-container">
+        <div class="zigzag-container zigzag-container--with-image-shadows">
             <div class="zigzag-container__item">
                 <div class="zigzag-container__item-description">
                     <h4 class="zigzag-container__title ">Website Design</h4>
