--- a/links/services.html
+++ b/links/services.html
@@ -79,7 +79,7 @@
         <div class="menu">
             <div class="menu__logo">
                 <a class="menu__logo-link" href="../index.html">
-                    <img src="../img/icons/fwrd-logo.png" alt="Logo image" class="menu__logo-img">
+                    <img src="../img/icons/fwrd-logo-white.png" alt="Logo image" class="menu__logo-img">
                 </a>
             </div>
             <nav class="navigation">
