--- a/links/contact.html
+++ b/links/contact.html
@@ -131,8 +131,7 @@
             <img src="../img/svg/Contact/contact-us-purple-wave.svg" alt="" class="section-form__wave-purple--top-right">
             <div class="u-center-text u-section-title  u-padding-bottom-med u-layer-relative-content">
                 <h2 class="h-1">
-                    <span class="u-text-block">Tell us about</span>
-                    <span class="u-text-block">your requirement</span>
+                    <span class="u-text-block">Get in touch</span>
                 </h2>
             </div>
             <form id="form" class="form" autocomplete="off">
