--- a/links/portfolio.html
+++ b/links/portfolio.html
@@ -122,7 +122,7 @@
                 <div class="zigzag-container__item-description">
                     <h4 class="zigzag-container__title">Website Design</h4>
                     <h3 class="zigzag-container__client">IAN BICK</h3>
-                    <p class="zigzag-container__description">Centralising a successful podcaster's portofolio into a
+                    <p class="zigzag-container__description">Centralising a successful podcaster's portfolio into a
                         modern, functional platform, while also delivering a tailored brand design uplift.</p>
                     <a href="../case-studies/ian-bick.html" class="button button--orange zigzag-container__button">View project</a>
                 </div>
