--- a/index.html
+++ b/index.html
@@ -378,8 +378,7 @@
         <section class="section-form" id="section-form">
                 <div class="u-center-text u-section-title  u-padding-bottom-med">
                     <h2 class="h-1">
-                        <span class="u-text-block">Tell us about</span>
-                        <span class="u-text-block">your requirement</span>
+                        <span class="u-text-block">Get in touch</span>
                     </h2>
                 </div>
                 <form id="form" class="form" autocomplete="off">
