--- a/links/portfolio.html
+++ b/links/portfolio.html
@@ -150,7 +150,7 @@
                     <h3 class="zigzag-container__client">PIXEL PLAYGROUND</h3>
                     <p class="zigzag-container__description">Construction of a three pronged hub for a new, youth
                         focused games studio, featuring the launch title, GAMESHOW, an integrated events portal, and a
-                        fully developed ecommeerce platform.</p>
+                        fully developed ecommerce platform.</p>
                     <a  href="../case-studies/pixel.html" class="button button--orange zigzag-container__button">View project</a>
                 </div>
                 <div class="zigzag-container__item-presentation">
