--- a/links/services.html
+++ b/links/services.html
@@ -198,6 +198,17 @@
                                     <div class="card__body"><p class="card__text">Get your site search engine ready, and optimise incoming traffic so that you can properly showcase your brand's value.</p></div>
                                 </div>
                             </div>
+                            <div class="card-container__row">
+                                <div class="card card--purple">
+                                    <div class="card__header"><h2 class="card__title">Ecommerce integration</h2></div>
+                                    <div class="card__body"><p class="card__text">Marry your mainline brand with your shop endeavours in a seamless, custom designed ecommerce platform.
+                                    </p></div>
+                                </div>
+                                <div class="card card--purple">
+                                    <div class="card__header"><h2 class="card__title">Customer Relationship Management</h2></div>
+                                    <div class="card__body"><p class="card__text">Build customer loyalty through specially designed newsletter automations that adapt to customer action.</p></div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
