--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
             <div class="content-layer">
                     <div class="u-center-text u-section-title">
                         <h3 class="h-3">
-                            Blog
+                            Blg
                         </h3>
                     </div>
                     <ul class="content-items">
